--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.surveyproject.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/home"
+        android:icon="@drawable/baseline_home_24"
+        android:title="ANASAYFA" />
+    <item
+        android:id="@+id/about"
+        android:icon="@drawable/baseline_home_24"
+
+        android:title="HAKKIMIZDA" />
+    <item
+        android:icon="@drawable/baseline_home_24"
+        android:id="@+id/contact"
+        android:title="İLETİŞİM"
+        />
+    <item
+        android:icon="@drawable/baseline_home_24"
+        android:id="@+id/gallery"
+        android:title="GÖRSELLER"
+        />
 </menu>
